<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="FILTRAR"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUlt48Horas"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="2dp"
            android:text="@string/ult48_horas"
            android:textColor="@color/colorBlank"
            android:textSize="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUlt7Dias"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="2dp"
            android:text="@string/ult7_dias"
            android:textColor="@color/colorBlank"
            android:textSize="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUlt15Dias"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="2dp"
            android:text="@string/ult15_dias"
            android:textColor="@color/colorBlank"
            android:textSize="12dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUlt30Dias"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="2dp"
            android:text="@string/ult30_dias"
            android:textColor="@color/colorBlank"
            android:textSize="12dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMasDe30Dias"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="20dp"
            android:text="@string/mas_de_30dias"
            android:textColor="@color/colorBlank"
            android:textSize="12dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="match_parent"
        android:text="@string/btnCancela"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="110dp"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
</RelativeLayout>