<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/text_regcedula">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:drawableStart="@drawable/ic_chrome_reader"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regnombres">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_account_box"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regapellidos">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_apellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_account_box"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regcorreo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_email"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regcelular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_phone_android"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regcontrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_regrepcontrasena">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_rp_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableTint="@color/icon_color"
                    android:drawablePadding="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="registrar"
                android:text="@string/text_btn_reg"
                android:textColor="@color/colorBlank"
                android:textSize="24sp"
                app:cornerRadius="350in"/>
            <com.google.android.material.button.MaterialButton

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="registrar"
                android:text="@string/text_btn_reg"
                android:textColor="@color/colorBlank"
                android:textSize="24sp"
                app:cornerRadius="350in"/>
            <com.google.android.material.button.MaterialButton

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="registrar"
                android:text="@string/text_btn_reg"
                android:textColor="@color/colorBlank"
                android:textSize="24sp"
                app:cornerRadius="350in"/>
            <com.google.android.material.button.MaterialButton

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="registrar"
                android:text="@string/text_btn_reg"
                android:textColor="@color/colorBlank"
                android:textSize="24sp"
                app:cornerRadius="350in"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>