<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="FECHA"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C8C9CB" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/fechaInicio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:onClick="onClick" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:hint="@string/fechaFin"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="178dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:onClick="onClick" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/entrar_boton"
        android:layout_width="match_parent"
        android:text="@string/btn_restablecer"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp"
        android:textColor="@android:color/white"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>
</RelativeLayout>